--- a/asgn-e-pg3.html
+++ b/asgn-e-pg3.html
@@ -4,6 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+	iframe{
+
+		
+		min-width: 375px;
+		
+	}
 	nav {
        background-color: #ffd82a;
         margin-bottom: 10px; 
@@ -15,6 +21,8 @@
 		}
 	a:link{
 		color: #ffd82a;
+		
+		
 	}
 	a:visited{
 		color: #F75E09;
@@ -64,7 +72,7 @@
 
 	
 	
-} /* This was the code I borrowed from w3schools */
+} 
 
 .topnav a {
 
@@ -123,9 +131,9 @@
 	<br>
 	
 <nav class="topnav" id="myTopnav" min-width="375px" max-width="1000px">
-  <a href="index.html" class="active">Home</a>
-  <a href="asgn-e-pg2.html">Report</a>
-  <a href="asgn-e-pg3.html">Sources</a>
+  <a href="index.html" class="active">HOME</a>
+  <a href="asgn-e-pg2.html">REPORT</a>
+  <a href="asgn-e-pg3.html">SOURCES</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -141,15 +149,16 @@
 		<br>
 		<a href="https://www.sessions.edu/notes-on-design/graphic-giants-april-greiman/"> Sessions College Article</a><br>
 			<h4>An Interview With Greiman</h4>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/l-IMxHjnZOo?si=Kk4zRKsxL88fUhfI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			<iframe width="380" height="280" src="https://www.youtube.com/embed/l-IMxHjnZOo?si=Kk4zRKsxL88fUhfI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		
     
 </div>
     </main>
+
 <footer>
     <h6>ASGN-E, Cody Islas-Santos</h6>
     </footer>
-
-</div><!-- This ends the "wrapper"-->
+</div>
 
 <script>
 function myFunction() {
