--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	#artwork{
 	color: #B01C3D;
 	}
-	#logo{
+	#logo{	width: 80%;
+	margin-left: 10%;
 		max-height: 600px;
 		max-width: 900px;
 	}
@@ -109,7 +110,7 @@ h6 {
 
 	
 	
-} /* This was the code I borrowed from w3schools */
+} 
 
 .topnav a {
 
@@ -163,8 +164,7 @@ h6 {
   }
 }
 
-@media screen and (min-width:784px){ /* This is where I'll put most of the responsive rules we've covered weeks 1-4 */
-	
+@media screen and (min-width:784px){ 
 	}
 	}
 </style>
@@ -174,9 +174,9 @@ h6 {
 <div>
 <header><img src="links/asgn-e-logo.svg" id="logo" /></header>
 <nav class="topnav" id="myTopnav" min-width="375px" max-width="1000px">
-  <a href="index.html" class="active">Home</a>
-  <a href="asgn-e-pg2.html">Report</a>
-  <a href="asgn-e-pg3.html">Sources</a>
+  <a href="index.html" class="active">HOME</a>
+  <a href="asgn-e-pg2.html">REPORT</a>
+  <a href="asgn-e-pg3.html">SOURCES</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -203,7 +203,7 @@ h6 {
     <h6>ASGN-E, Cody Islas-Santos</h6>
     </footer>
 
-</div><!-- This ends the "wrapper"-->
+</div>
 
 <script>
 function myFunction() {
